force-app/main/default/objects/FSM_TMAPermitConditions__c/FSM_TMAPermitConditions__c.object-meta.xml
<CustomObject>
    <description>Created as part of user story #SFS-32</description>
    <label>TMA  Condition</label>
    <nameField>
        <displayFormat>TMAPERCOND-{000000}</displayFormat>
        <label>TMA Permit Conditions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMA  Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>