force-app/main/default/objects/FSM_TMAPermitConditions__c/fields/FSM_TMAPermit__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermit__c</fullName>
    <description>Created as part of user story #SFS-32</description>
    <label>FSM TMA Permit</label>
    <referenceTo>FSM_TMAPermit__c</referenceTo>
    <relationshipName>FSM_TMAPermitConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>