force-app/main/default/objects/FSM_TMAPermitConditions__c/fields/FSM_TMAPermitCondition__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermitCondition__c</fullName>
    <description>Created as part of user story #SFS-32
Updated label and picklist value as part of SFS-8359</description>
    <label>Activity Condition Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date Constraints</fullName>
            </value>
            <value>
                <fullName>Time Constraints</fullName>
            </value>
            <value>
                <fullName>Out of Hours Work</fullName>
            </value>
            <value>
                <fullName>Material and Plant Storage</fullName>
            </value>
            <value>
                <fullName>Road Occupation Dimensions</fullName>
            </value>
            <value>
                <fullName>Traffic Space Dimensions</fullName>
            </value>
            <value>
                <fullName>Road Closure</fullName>
            </value>
            <value>
                <fullName>Light Signals and Shuttle Working</fullName>
            </value>
            <value>
                <fullName>Traffic Management Changes</fullName>
            </value>
            <value>
                <fullName>Work Methodology</fullName>
            </value>
            <value>
                <fullName>Consultation and Publicity</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Duration APPLIES TO ALL PERMITS on streets where the validity window does not apply</fullName>
            </value>
            <value>
                <fullName>Duration APPLIES TO ALLPERMITS on streets where the validity window applies</fullName>
            </value>
            <value>
                <fullName>Limit the days and times of day</fullName>
            </value>
            <value>
                <fullName>Working Hours</fullName>
            </value>
            <value>
                <fullName>Removal of surplus materials/plant</fullName>
            </value>
            <value>
                <fullName>Storage of surplus materials/plant</fullName>
            </value>
            <value>
                <fullName>Width and/or length of road space that can be occupied</fullName>
            </value>
            <value>
                <fullName>Road space to be available to traffic/pedestrians at certain times of day</fullName>
            </value>
            <value>
                <fullName>Road Closed to Traffic</fullName>
            </value>
            <value>
                <fullName>Traffic Management Request</fullName>
            </value>
            <value>
                <fullName>Manual Control of Traffic Management</fullName>
            </value>
            <value>
                <fullName>Changes to traffic management arrangements</fullName>
            </value>
            <value>
                <fullName>Traffic management arrangements to be in place</fullName>
            </value>
            <value>
                <fullName>Signal Removal from operation when no longer required</fullName>
            </value>
            <value>
                <fullName>Employment of appropriate methodology</fullName>
            </value>
            <value>
                <fullName>APPLIES TO ALL PERMITS Display of Permit Number</fullName>
            </value>
            <value>
                <fullName>Publicity for proposed works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>