force-app/main/default/objects/FSM_TMAPermitConditions__c/fields/FSM_TMAPermitConditionText__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermitConditionText__c</fullName>
    <description>Label Updated as a part of SFS-4792
Label updated as a part of SFS-8130
Updated label as part of SFS-8359</description>
    <label>Activity Condition Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>