force-app/main/default/objects/FSM_TMAPermitConditions__c/fields/FSM_TMAPermitConditionType__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermitConditionType__c</fullName>
    <description>Created as part of user story #SFS-32
Updated as part of SFI-1616
Field label updated as part of SFS-4792</description>
    <label>Activity Condition Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCT01a</fullName>
            </value>
            <value>
                <fullName>NCT01b</fullName>
            </value>
            <value>
                <fullName>NCT02a</fullName>
            </value>
            <value>
                <fullName>NCT02b</fullName>
            </value>
            <value>
                <fullName>NCT03</fullName>
            </value>
            <value>
                <fullName>NCT04a</fullName>
            </value>
            <value>
                <fullName>NCT04b</fullName>
            </value>
            <value>
                <fullName>NCT05a</fullName>
            </value>
            <value>
                <fullName>NCT06a</fullName>
            </value>
            <value>
                <fullName>NCT07a</fullName>
            </value>
            <value>
                <fullName>NCT08a</fullName>
            </value>
            <value>
                <fullName>NCT08b</fullName>
            </value>
            <value>
                <fullName>NCT09a</fullName>
            </value>
            <value>
                <fullName>NCT09b</fullName>
            </value>
            <value>
                <fullName>NCT09c</fullName>
            </value>
            <value>
                <fullName>NCT09d</fullName>
            </value>
            <value>
                <fullName>NCT10a</fullName>
            </value>
            <value>
                <fullName>NCT11a</fullName>
            </value>
            <value>
                <fullName>NCT11b</fullName>
            </value>
            <value>
                <fullName>NCT12a</fullName>
            </value>
            <value>
                <fullName>NCT13</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>